# limes

./: .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  FINAL_SUMMARY.md  MIGRATION_TO_CALCKIT.md  MULTIVARIATE_DESIGN.md  NAME_ANALYSIS.md  README.md  RENAME_PLAN.md  RENAME_STATUS.md  ROADMAP.md  SESSION_SUMMARY.md  STEPANOV_DESIGN.md  VISION.md  antiderivative.hpp  complete_rename.sh  double_exponential_integrator.hpp  gauss_quad_integrator.hpp  index.html  makefile  mkdocs.yml  numerical_univariate_integrator.hpp  rectangle_rule_integrator.hpp  simple_demo  simpson_integrator.hpp  test_basic
.github/workflows/: docs.yml
api/accumulators/: index.html
api/differentiation/: index.html
api/integration/: index.html
api/ode-solvers/: index.html
architecture/: index.html
cmake/: LimesCompilerOptions.cmake  algebraic_integratorsConfig.cmake.in  calckitConfig.cmake.in
docs/: Doxyfile.in  LIMES_DESIGN.md  about.md  algorithms.md  architecture.md  blog-limes-v3.md  examples.md  getting-started.md  index.md  mainpage.md  motivation.md  testing.md  tutorial.md
docs/api/: accumulators.md  differentiation.md  integration.md  ode-solvers.md
examples/: CMakeLists.txt  demo.cpp  index.html  simple_demo.cpp
getting-started/: index.html
include/: algebraic_integrators.hpp  antiderivative.hpp  calckit.hpp  central_finite_difference.hpp  numerical_differentiation.hpp
include/accumulators/: accumulators.hpp
include/concepts/: integrator_concepts.hpp  multivariate_concepts.hpp
include/core/: integration_result.hpp
include/integrators/: univariate_integrator.hpp
include/limes/: fwd.hpp  limes.hpp
include/limes/algorithms/accumulators/: accumulators.hpp
include/limes/algorithms/concepts/: concepts.hpp
include/limes/algorithms/core/: result.hpp
include/limes/algorithms/integrators/: integrators.hpp
include/limes/algorithms/quadrature/: quadrature.hpp
include/limes/expr/: analysis.hpp  box_integral.hpp  integral.hpp  product_integral.hpp  to_string.hpp
include/limes/expr/nodes/: binary.hpp  binary_func.hpp  bound.hpp  conditional.hpp  const.hpp  named_var.hpp  pow.hpp  primitives.hpp  sum_product.hpp  unary.hpp  var.hpp
include/limes/methods/: concepts.hpp  methods.hpp
include/multivariate/: regions.hpp  tensor_product_integrator.hpp
include/numerical_integrators/: double_exponential_integrator.hpp  gauss_quad_integrator.hpp  line_integral.hpp  numerical_univariate_integrator.hpp  rectangle_rule_integrator.hpp  simpson_integrator.hpp
include/ode/: euler_ode1.hpp  euler_ode2.hpp  interval.hpp  ode_test.cpp  rk4_ode2.hpp
include/parallel/: parallel_integration.hpp
include/quadrature/: quadrature_rules.hpp
include/transforms/: coordinate_transforms.hpp
ode/: makefile  rk4_ode1.hpp
search/: search_index.json
testing/: index.html
tests/: CMakeLists.txt  basic_tests.cpp  test_accumulators.cpp  test_antiderivative.cpp  test_concepts.cpp  test_differentiation.cpp  test_integration_result.cpp  test_integrators.cpp  test_ode_solvers.cpp  test_parallel.cpp  test_quadrature.cpp  test_result.cpp  test_transforms.cpp
